--- a/package.json
+++ b/package.json
@@ -1,42 +1,31 @@
 {
-  "name": "unifyid",
+  "name": "UnifyId",
   "version": "1.0.0",
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
-  "main": "index.js",
+  "main": "app.jsx",
   "directories": {
-    "doc": "docs",
     "test": "test"
   },
   "engines": {
-    "node": "6.2.1",
-    "npm": "3.9.3"
+    "node": "4.2.1",
+    "npm": "2.14.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack"
+    "postinstall": "webpack",
+    "webpack": "webpack --watch",
+    "start": "webpack-dev-server --inline"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/clairewild/EvernoteClone.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/clairewild/EvernoteClone/issues"
-  },
-  "homepage": "https://github.com/clairewild/EvernoteClone#readme",
   "dependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "webpack": "^2.2.1"
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
   }
 }
